--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
-name: "SFB_arrythmia"
+name: SFB_arrythmia
 output_dir: ../docs
 navbar:
-  title: "SFB_arrythmia"
+  title: SFB_arrythmia
   left:
   - text: Home
     href: index.html
@@ -9,6 +9,10 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  right:
+  - icon: fa-github
+    text: Source code
+    href: https://github.com/JanLanzer/SFB_arrythmia
 output:
   workflowr::wflow_html:
     toc: yes
